[project]
name = "prism"
version = "0.1.0"
description = "Utilities for checking stats on Hypixel"
readme = "README.md"
authors = [
    { name = "Amund Eggen Svandal", email = "aesvandal@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "appdirs",
    "cachetools",
    "requests",
    "tendo>=0.3.0",
    "toml",
    "truststore",
    "pynput",
    "pywin32; platform_system=='Windows'",
]
classifiers = [
    "Programming Language :: Python :: 3"
]
license = "AGPL-3.0-only"
license-files = ["LICEN[CS]E.*"]

[project.urls]
Homepage = "https://prismoverlay.com"
Repository = "https://github.com/Amund211/prism"

[build-system]
requires = ["uv_build>=0.8.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "coverage>=7.10.7",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "pillow>=11.3.0",
    "pre-commit>=4.3.0",
    "pyinstaller>=6.16.0",
    "pytest>=8.4.2",
    "types-appdirs>=1.4.3.5",
    "types-cachetools>=6.2.0.20250827",
    "types-pillow>=10.2.0.20240822",
    "types-pyinstaller>=6.16.0.20250918",
    "types-pynput>=1.8.1.20250809",
    "types-requests>=2.32.4.20250913",
    "types-toml>=0.10.8.20240310",
]

[tool.uv]
# Require that the installed packages support both intel and apple silicon on macos.
# NOTE: We actually want to enforce downloading universal2 wheels on macos when not
#       using an sdist so that pyinstaller can correctly create a universal2 binary.
#       This is not possible today. See e.g. https://github.com/astral-sh/uv/issues/13104
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | __pycache__
  | build
  | dist
  | venv
  | .venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = "prism"
skip = ".git,.mypy_cache,__pycache__,build,dist,venv,.venv"

[tool.mypy]
exclude = [
  '^\.git/$',
  '^\.mypy_cache/$',
  '^__pycache__/$',
  '^build/$',
  '^dist/$',
  '^venv/$',
  '^.venv/$',
]

[tool.coverage.run]
source=['src/prism']
command_line='-m pytest -r fEs'

[tool.coverage.report]
show_missing=true
skip_covered=true
fail_under=100
omit=[
  'src/prism/stats.py',
  'src/prism/overlay/platform/windows.py',
  'src/prism/discordrp/__init__.py',
]
