[metadata]
name = hystatutils-amund211
version = 0.1.0
author = Amund Eggen Svandal
author_email = aesvandal@gmail.com
description = Utilities for checking stats on Hypixel
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Amund211/hystatutils
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    appdirs
    requests
    toml

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,.mypy_cache,__pycache__,build,dist,venv

[coverage:run]
source=src/hystatutils,examples/sidelay
command_line=-m pytest

[coverage:report]
show_missing=true
skip_covered=true
fail_under=100
omit=src/hystatutils/minecraft.py,src/hystatutils/playerdata.py,examples/sidelay/__main__.py,examples/sidelay/stats.py,examples/sidelay/output/overlay.py,examples/sidelay/output/overlay_window.py,examples/sidelay/output/printing.py
