[metadata]
name = prism-amund211
version = 0.1.0
author = Amund Eggen Svandal
author_email = aesvandal@gmail.com
description = Utilities for checking stats on Hypixel
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Amund211/prism
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    appdirs
    cachetools
    requests
    tendo
    toml
    pywin32;platform_system=="Windows"

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,.mypy_cache,__pycache__,build,dist,venv

[coverage:run]
source=src/prism,examples/overlay
command_line=-m pytest -r fEs

[coverage:report]
show_missing=true
skip_covered=true
fail_under=100
omit=examples/overlay/__main__.py, examples/overlay/output/overlay/run_overlay.py, examples/overlay/output/overlay/stats_overlay.py, examples/overlay/output/overlay/toolbar.py, examples/overlay/output/overlay/settings_page.py, examples/overlay/output/overlay/main_content.py, examples/overlay/output/overlay/overlay_window.py, examples/overlay/output/printing.py, examples/overlay/platform/windows.py, examples/overlay/threading.py, examples/overlay/user_interaction.py
